# diosix

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  Cargo.toml.sifive_u34  Dockerfile  LICENSE  README.md  SECURITY.md  _config.yml  build.rs  build.sh  entrypoint.py  entrypoint.sh  justfile  manifest.toml  rustfmt.toml
.cargo/: config
.github/workflows/: docker-build.yml  docker-release.yml  docker-test.yml
banners/: riscv32imac-unknown-none-elf.txt  riscv64gc-unknown-none-elf.txt  riscv64imac-unknown-none-elf.txt  welcome.txt
boot/banners/: riscv.txt  welcome.txt
boot/buildroot/: kernel_cmdline_config  riscv32.config  riscv32imac.config  riscv64-linux-busybox-asciiinvaders.config  riscv64-linux-busybox-micropython.config  riscv64-linux-busybox.config  riscv64.config  riscv64gc.config  riscv64imac.config
cargoes/: Cargo.toml.common  Cargo.toml.qemu32_virt  Cargo.toml.qemu_virt  Cargo.toml.sifive_u34
docker/: Dockerfile  entrypoint.py
docs/: building.md  buildroot.md  conduct.md  qemu.md  running.md  security.md  toolchain.md
guests/buildroot/: riscv32.config  riscv64.config
hypervisor/: Cargo.toml  build.rs
hypervisor/src/: capsule.rs  debug.rs  heap.rs  irq.rs  main.rs  manifest.rs  physmem.rs  service.rs  vcore.rs
platform/x86/: grub.cfg  linker.ld  makefile
platform/x86/asm/: .start.s.swp  interrupts.s  multiboot_head.s  start.s  start32.s  start64.s
platform/x86/src/: exceptions.rs  interrupts.rs  io.rs  mod.rs  multiboot.rs  pages.rs  paging.rs  pgstack.rs  physmem.rs  pic.rs  swis.rs
services/: Cargo.toml  build.rs
services/.cargo/: config
src/: debug.rs  errors.rs  heap.rs  lib.rs  main.rs
src/contrib/ego-tree/: LICENSE  README.md
src/contrib/ego-tree/src/: iter.rs  lib.rs
src/contrib/hashmap_core/: Cargo.toml  README.md
src/contrib/hashmap_core/src/: fnv.rs  lib.rs  map.rs  set.rs  table.rs
src/contrib/hermit-dtb/: Cargo.toml  README.md
src/contrib/hermit-dtb/src/: lib.rs
src/contrib/lazy-static.rs/: Cargo.toml  README.md
src/contrib/lazy-static.rs/src/: lib.rs
src/contrib/spin-rs/: README.md
src/contrib/spin-rs/src/: atomic.rs  lib.rs  mutex.rs  once.rs
src/hypervisor/: Cargo.toml  abort.rs  capsule.rs  cpu.rs  debug.rs  error.rs  hardware.rs  heap.rs  irq.rs  loader.rs  main.rs  mason.toml  message.rs  pcore.rs  physmem.rs  scheduler.rs  service.rs  vcore.rs  virtmem.rs
src/hypervisor/.cargo/: config
src/hypervisor/src/: capsule.rs  debug.rs  error.rs  hardware.rs  heap.rs  irq.rs  loader.rs  lock.rs  main.rs  manifest.rs  message.rs  panic.rs  pcore.rs  physmem.rs  scheduler.rs  service.rs  vcore.rs  virtmem.rs
src/kernel/: abort.rs  container.rs  cpu.rs  debug.rs  environment.rs  error.rs  heap.rs  irq.rs  lock.rs  main.rs  physmem.rs  scheduler.rs  thread.rs
src/kernel/heap/: mod.rs
src/kernel/lock/: mod.rs
src/kernel/supervisor/: main.rs  mod.rs
src/platform/riscv/: Cargo.toml  link.ld
src/platform/riscv/asm/: atomics.s  bootsupervisor.s  consts.s  entry.s  irq.s  serial.s  timer.s  utils.s
src/platform/riscv/src/: cpu.rs  csr.rs  devicetree.rs  irq.rs  lib.rs  physmem.rs  serial.rs  test.rs  timer.rs
src/platform/riscv32/common/: Cargo.toml  link-nonsmp.ld  link-smp.ld  link.ld
src/platform/riscv32/common/asm/: atomics.s  consts.s  debug.s  entry.s  irq.s  physmem.s  timer.s  utils.s
src/platform/riscv32/common/src/: cpu.rs  csr.rs  devicetree.rs  irq.rs  lib.rs  physmem.rs  timer.rs
src/platform/riscv32/qemu32_virt/: link.ld
src/platform/riscv32/qemu32_virt/asm/: atomics.s  entry.s  page_zero.s  serial.s  utils.s
src/platform/riscv32/qemu32_virt/src/: lib.rs
src/platform/riscv32/qemu_virt/: link.ld
src/platform/riscv32/qemu_virt/asm/: entry.s  serial.s
src/platform/riscv32/qemu_virt/src/: lib.rs
src/platform/riscv32/sifive_e/: link.ld
src/platform/riscv32/sifive_e/asm/: entry.s
src/platform/riscv32/sifive_e300/: link.ld
src/platform/riscv32/sifive_e300/asm/: entry.s  serial.s
src/platform/riscv32/sifive_u34/: Cargo.toml  link.ld
src/platform/riscv32/sifive_u34/asm/: atomics.s  entry.s  serial.s  utils.s
src/platform/riscv32/sifive_u34/src/: lib.rs
src/platform/riscv32/spike/: link.ld
src/services/: Cargo.toml  mason.toml
src/services/.cargo/: config
