[package]
name = "diosix"
version = "2.0.0"
authors = ["Chris Williams <diodesign@tuta.io>"]
license = "MIT"
build = "build.rs"
publish = false

[[bin]]
name = "hypervisor"
path = "src/hypervisor/main.rs"

[build-dependencies]
regex = "1.1.9"

[profile.dev]
panic = "abort"
debug-assertions = true
debug = true
overflow-checks = true
opt-level = 0
incremental = true

[profile.release]
panic = "abort"
debug-assertions = false
debug = false
overflow-checks = false
opt-level = 3
incremental = false

# fixed dependencies
[dependencies.spin]
version = "0.5"

[dependencies.hashbrown]
version = "0.5.0"
features = [ "nightly" ]

[dependencies.lazy_static]
version = "1.3.0"
features = [ "spin_no_std" ]

[dependencies.goblin]
version = "0.0.23"
default-features = false
features = [ "elf32", "elf64" ]

# supported build targets - don't forget to update .cargo with details for the linker and runner 
[target.riscv32imac-unknown-none-elf.dependencies]
platform = { path = "src/platform/riscv/" }

[target.riscv64imac-unknown-none-elf.dependencies]
platform = { path = "src/platform/riscv/" }

[target.riscv64gc-unknown-none-elf.dependencies]
platform = { path = "src/platform/riscv/" }
