[package]
name = "diosix"
version = "2.0.0"
authors = ["Chris Williams <diosix@tuta.io>"]
license = "MIT"
build = "build.rs"
publish = false
edition = "2018"

[[bin]]
name = "hypervisor"
path = "src/hypervisor/main.rs"

[build-dependencies]
regex = "1.3.7"

[features]
qemudebug = [ "qemuprint" ]

# local dependencies
[dependencies]
devicetree = { path = "src/devicetree" }
qemuprint = { path = "src/qemuprint", optional = true }

# external dependencies
[dependencies.spin]
version = "0.5.2"

[dependencies.hashbrown]
version = "0.7.2"
features = [ "nightly" ]

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]

[dependencies.xmas-elf]
version = "0.7.0"

# supported build targets - don't forget to update .cargo with details for the linker and runner when adding new ports
[target.riscv32imac-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }

[target.riscv64imac-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }

[target.riscv64gc-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }
