[package]
name = "hypervisor"
version = "0.0.1"
authors = ["Chris Williams <diosix@tuta.io>"]
license = "MIT"
build = "../mason/build.rs"
publish = false
edition = "2018"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[build-dependencies]
regex = "1.4.2"
toml = "0.5.7"
serde = "1.0.118"
serde_derive = "1.0.118"

[features]
qemuprint = [] # enable to force debug text through Qemu's serial port

# local dependencies
[dependencies]
devicetree = { path = "src/devicetree" }
dmfs = { path = "../mkdmfs/dmfs" }

# external dependencies
[dependencies.spin]
version = "0.7.0"

[dependencies.hashbrown]
version = "0.9.1"
features = [ "nightly" ]

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]

[dependencies.xmas-elf]
version = "0.7.0"

# supported build targets - don't forget to update .cargo with details for the linker and runner when adding new ports
[target.riscv32imac-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }

[target.riscv64imac-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }

[target.riscv64gc-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }
