[package]
name = "hypervisor"
version = "0.0.2"
authors = ["Chris Williams <chrisw@diosix.org>"]
license = "MIT"
build = "../mason/build.rs"
publish = false
edition = "2018"

[[bin]]
name = "hypervisor"
path = "src/main.rs"

[build-dependencies]
regex = "1.4.2"
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"

[features]
qemuprint = [] # enable to force debug text through Qemu's serial port
sifiveprint = [] # enable to force debug text through SiFive's standard serial port
htifprint = [] # enable to force debug text through Spike's HTIF
integritychecks = [] # enable to check integrity of per-CPU structures from overwrites */

# local and special dependencies
[dependencies]
devicetree = { path = "src/devicetree" }
dmfs = { path = "../mkdmfs/dmfs" }
xmas-elf = { git = "https://github.com/nrc/xmas-elf.git" }

# external dependencies
[dependencies.hashbrown]
version = "0.9.1"
features = [ "nightly" ]

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]

# supported build targets - don't forget to update .cargo with details for the linker and runner when adding new ports
[target.riscv64imac-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }

[target.riscv64gc-unknown-none-elf.dependencies]
platform = { path = "src/platform-riscv" }
