[package]
name = "diosix-services"
version = "1.0.0"
authors = ["Chris Williams <chrisw@diosix.org>"]
license = "MIT"
publish = false
edition = "2018"

[[bin]]
name = "gooey"
path = "src/gooey/src/main.rs"

[build-dependencies]
regex = "1.4.2"
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]

[dependencies.spin]
version = "0.7.0"

[target.riscv64imac-unknown-none-elf.dependencies]
supervisor = { path = "src/supervisor-riscv" }

[target.riscv64gc-unknown-none-elf.dependencies]
supervisor = { path = "src/supervisor-riscv" }
