[package]
name = "diosix-services"
version = "1.0.0"
authors = ["Chris Williams <chrisw@diosix.org>"]
license = "MIT"
publish = false
edition = "2018"

[[bin]]
name = "gooey"
path = "src/gooey/src/main.rs"

[build-dependencies]
regex = "1.4.2"
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"

[dependencies.spinning]
git = "https://github.com/diodesign/spinning-rs"
default-features = false

[target.riscv64imac-unknown-none-elf.dependencies]
supervisor = { path = "src/supervisor-riscv" }

[target.riscv64gc-unknown-none-elf.dependencies]
supervisor = { path = "src/supervisor-riscv" }
